78 - Swagger optimizations & code quality enhancements (#79)
* Code quality optimizations

* optimizations

* FIX

* liquibase typos fix

---------

Co-authored-by: alopalka <alopalka@proton.me>